2002-11-08  Thomas Vander Stichele <thomas at apestaart dot org>

        * gnome-vfs-mime-magic:
        * gnome-vfs.applications:
        * gnome-vfs.keys.in:
        * gnome-vfs.mime: added flac (lossless audio compression)

2002-11-04  Alexander Kirillov <kirillov@math.sunysb.edu>

	* gnome-vfs.keys.in: added an icon for text/x-tex (same one as 
	  application/x-tex)

2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-10-31  Thomas Vander Stichele <thomas at apestaart dot org>

        * icons/: added flac icon from jimmac

2002-10-25  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: asx isn't asf

2002-10-25  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Microsoft ASX playlist format's mimetype

2002-10-21  Seth Nickell  <snickell@stanford.edu>

	* icons/gnome-audio-prs.sid.png:

	Icon from Linus Walleij
	
2002-10-06  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in: fix all the warnings from check-mime.pl
	* gnome-vfs.mime: added TODO as text/x-readme

2002-09-30  Marco Pesenti Gritti  <marco@it.gnome.org>

	* gnome-vfs.keys.in: Add audio/mpeg entry and rename audio/x-mpeg
	* gnome-vfs.mime: Add audio/mpeg for mp1 extension
	* gnome-vfs.applications: Use audio/mpeg

2002-09-04  Alex Graveley  <alex@ximian.com>

	* gnome-vfs.applications: Add -p to gnome-sound-recorder command
	so sound files are played on startup.  Fixes bug #90959.

2002-08-20  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:

	Add entry for shoutcast playlist (audio/x-scpls)
	
2002-08-18  James Willcox  <jwillcox@cs.indiana.edu>

	* gnome-vfs.applications:  gedit expects URIs, not local paths

2002-08-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added gimp as a possible application for g3fax,
	pcx, targa and xwd images